--- a/initdb.conf
+++ b/initdb.conf
@@ -29,7 +29,7 @@ define ("DB_PASSWORD", "");
 define ("SYSADMIN", "your_email@example.it");
 
 define ("DEBUG", "no");
-define ("QUERY_LOG", "yes"); //use a Mysql log table
+define ("QUERY_LOG", "no"); //use a Mysql log table
 define ("QUERY_DEBUG", "yes");	
 define ("SAVELOG", 0);
 
@@ -40,6 +40,7 @@ date_default_timezone_set('Europe/Rome');
 #language settings: the array contains the name of the language, its flag image, and if it must be written right-to-left (rtl) or left-to-right (it is the default, using an empty string).
 $languages = array(
 	"en" => array ("English","img/flag/en.png",""),
+	"lv" => array ("Latvian","img/flag/en.png",""),
 	"ar" => array ("Arabic","img/flag/ar.png","rtl"),
 	"ru" => array ("Russian","img/flag/ru.png",""),
 	"zh" => array ("Chinese","img/flag/zh.png",""),
